--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ dependencies = [
     "lightning>=2.4.0",
     "datasets[audio]>=3.1.0",
     "pytest>=8.3.4",
+    "transformers>=4.47.0",
+    "tokenizers>=0.21.0",
+    "accelerate>=1.2.0",
 ]
 
 [tool.uv.sources]
