Improve:リファクタリング。notebookの移動

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,11 @@
         "DDPM",
         "downsample",
         "downsampling",
+        "imshow",
         "keepdim",
         "librosa",
         "mels",
+        "ndarray",
         "randn",
         "Resampler",
         "timestep",
