Fix:全体的な修正、hydraの導入とloggerの追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "DDPM",
         "downsample",
         "downsampling",
+        "hyperparams",
         "imshow",
         "keepdim",
         "librosa",
