--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
     "transformers>=4.47.0",
     "tokenizers>=0.21.0",
     "accelerate>=1.2.0",
+    "hydra-core>=1.3.2",
+    "neptune>=1.13.0",
 ]
 
 [tool.uv.sources]
