--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
     "accelerate>=1.2.0",
     "hydra-core>=1.3.2",
     "neptune>=1.13.0",
+    # [plotly - no kaleido source distribution or wheel for uv on current platform - Stack Overflow](https://stackoverflow.com/questions/79241839/no-kaleido-source-distribution-or-wheel-for-uv-on-current-platform)
+    "kaleido==0.2.0",
 ]
 
 [tool.uv.sources]
