Change:一部処理の切り出し、MelConfigの追加

--- a/conf/train/default.yaml
+++ b/conf/train/default.yaml
@@ -1,9 +1,14 @@
 metadata_dir: "./data/FMA/fma_metadata"
 audio_dir: "./data/FMA/fma_small"
 
-sr: 22050
-batch_size: 2
+batch_size: 1
 epochs: 1
 lr: 0.001
 
-fast_dev_run: false
+fast_dev_run: true
+
+trainer_logger: null
+
+model_logger: null
+
+callbacks: null
