--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "randn",
         "Resampler",
         "specshow",
+        "stype",
         "timestep",
         "timesteps",
         "torchaudio",
