Add:profilerプロパティの追加

--- a/conf/train/default.yaml
+++ b/conf/train/default.yaml
@@ -4,11 +4,10 @@ audio_dir: "./data/FMA/fma_small"
 batch_size: 1
 epochs: 1
 lr: 0.001
+profiler: null
 
 fast_dev_run: true
 
 trainer_logger: null
-
 model_logger: null
-
 callbacks: null
