--- a/conf/infer/default.yaml
+++ b/conf/infer/default.yaml
@@ -2,4 +2,4 @@ checkpoint_path: null
 callbacks:
   - _target_: src.script.inference_callbacks.SaveOutputInferenceCallback
     save_dir: "output/"
-    save_timesteps: [999, 499]
+    save_timesteps: [999, 499, 0]
