Improve:build-systemの追加、より直感的なプロジェクト構造に変更

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,3 +41,10 @@ torchaudio = { index = "torch-cuda" }
 name = "torch-cuda"
 url = "https://download.pytorch.org/whl/cu124"
 explicit = true
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
