Change:DiffWaveの仮追加とDataset周りの変更

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "controlnet",
         "DDIM",
         "DDPM",
+        "diffwave",
         "downsample",
         "downsampling",
         "hyperparams",
