--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "neptune>=1.13.0",
     # [plotly - no kaleido source distribution or wheel for uv on current platform - Stack Overflow](https://stackoverflow.com/questions/79241839/no-kaleido-source-distribution-or-wheel-for-uv-on-current-platform)
     "kaleido==0.2.0",
+    "schedulefree>=1.4",
 ]
 
 [tool.uv.sources]
