Add:nanのチェック機構の仮追加とoptimizer関連のコードを追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "ndarray",
         "randn",
         "Resampler",
+        "schedulefree",
         "specshow",
         "stft",
         "stype",
