--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     # [plotly - no kaleido source distribution or wheel for uv on current platform - Stack Overflow](https://stackoverflow.com/questions/79241839/no-kaleido-source-distribution-or-wheel-for-uv-on-current-platform)
     "kaleido==0.2.0",
     "schedulefree>=1.4",
+    "rich>=13.9.4",
 ]
 
 [tool.uv.sources]
