--- a/conf/train/default.yaml
+++ b/conf/train/default.yaml
@@ -4,8 +4,11 @@ lr: 0.001
 profiler: null
 criterion:
   _target_: torch.nn.L1Loss
+accumulate_grad_batches: 1
 
 fast_dev_run: true
 
 trainer_logger: null
-callbacks: null
+callbacks:
+  - _target_: lightning.pytorch.callbacks.EarlyStopping
+    monitor: train_loss
