--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "kaleido==0.2.0",
     "schedulefree>=1.4",
     "rich>=13.9.4",
+    "pydantic>=2.10.4",
 ]
 
 [tool.uv.sources]
