Add:infer_diffwaveを追加、infer周りの実装の変更

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "hyperparams",
         "imshow",
         "keepdim",
+        "lamdba",
         "librosa",
         "mels",
         "ndarray",
