--- a/conf/infer/default.yaml
+++ b/conf/infer/default.yaml
@@ -1,5 +1,5 @@
 checkpoint_path: null
+output_dir: "output/"
 callbacks:
-  - _target_: music_controlnet.module.inference_callbacks.SaveOutputInferenceCallback
-    save_dir: "output/"
+  - _target_: music_controlnet.module.inference_callbacks.SaveInferenceCallback
     save_timesteps: [999, 499, 0]
