--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python デバッガー: 引数を含む現在のファイル",
+            "name": "Python デバッガー: 引数を含むmain.py",
             "type": "debugpy",
             "request": "launch",
-            "program": "${file}",
+            "program": "main.py",
             "console": "integratedTerminal",
-            "args": [
-                "${command:pickArgs}"
-            ]
+            "justMyCode": false,
+            "args": "${command:pickArgs}"
         }
     ]
 }
