--- a/conf/mel/default.yaml
+++ b/conf/mel/default.yaml
@@ -2,7 +2,7 @@ sr: 22050
 n_fft: 2048
 win_length: 2048
 hop_length: 256
-fixed_length: 864
 n_mels: 128
 top_db: 80
-num_segments: 3
+n_segments: 3
+audio_duration: 30
