Update:設定ファイルの更新

--- a/conf/train/default.yaml
+++ b/conf/train/default.yaml
@@ -9,6 +9,21 @@ accumulate_grad_batches: 1
 fast_dev_run: true
 
 trainer_logger: null
+  _target_: lightning.pytorch.loggers.NeptuneLogger
+  project: aaa/bbb
+  api_key: xxx
+  log_model_checkpoints: true
+
 callbacks:
   - _target_: lightning.pytorch.callbacks.EarlyStopping
     monitor: train_loss
+  # - _target_: lightning.pytorch.callbacks.BatchSizeFinder
+  # - _target_: callback.discord.DiscordCallback
+  #   webhook_url: xxx
+  # - _target_: music_controlnet.callbacks.UNetNeptuneLoggerCallback
+  #   timesteps: 1
+  #   n_mels: 128
+  #   length: 864
+  # - _target_: vocoder.callbacks.DiffWaveNeptuneLoggerCallback
+  #   test_dir: data/vocoder_test
+  #   hop_length: 256
