--- a/conf/train/default.yaml
+++ b/conf/train/default.yaml
@@ -9,10 +9,10 @@ accumulate_grad_batches: 1
 fast_dev_run: true
 
 trainer_logger: null
-  _target_: lightning.pytorch.loggers.NeptuneLogger
-  project: aaa/bbb
-  api_key: xxx
-  log_model_checkpoints: true
+  # _target_: lightning.pytorch.loggers.NeptuneLogger
+  # project: aaa/bbb
+  # api_key: xxx
+  # log_model_checkpoints: true
 
 callbacks:
   - _target_: lightning.pytorch.callbacks.EarlyStopping
