--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ dependencies = [
     "schedulefree>=1.4",
     "rich>=13.9.4",
     "pydantic>=2.10.4",
+    "einops>=0.8.0",
+    "alias-free-torch>=0.0.6",
 ]
 
 [tool.uv.sources]
