Change:macでも実行できるように変更

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "torch==2.5.1+cu124",
-    "torchvision==0.20.1+cu124",
-    "torchaudio==2.5.1+cu124",
+    "torch==2.5.1+cu124; sys_platform == 'linux' and platform_machine == 'x86_64'",
+    "torch==2.5.1; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')",
+    "torchvision==0.20.1+cu124; sys_platform == 'linux' and platform_machine == 'x86_64'",
+    "torchvision==0.20.1; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')",
+    "torchaudio==2.5.1+cu124; sys_platform == 'linux' and platform_machine == 'x86_64'",
+    "torchaudio==2.5.1; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')",
     "llvmlite>=0.43.0",
     "librosa>=0.10.2.post1",
     "diffwave>=0.1.7",
@@ -38,9 +41,11 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-torch = { index = "torch-cuda" }
-torchvision = { index = "torch-cuda" }
-torchaudio = { index = "torch-cuda" }
+torch = { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
+
+torchaudio = { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
+
+torchvision = { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
 
 [[tool.uv.index]]
 name = "torch-cuda"
