Improve:柔軟性を上げるために大規模リファクタリング

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "ckpt",
         "colorbar",
         "controlnet",
+        "datamodule",
         "DDIM",
         "DDPM",
         "diffwave",
