--- a/conf/train/default.yaml
+++ b/conf/train/default.yaml
@@ -1,6 +1,4 @@
-batch_size: 4
 epochs: 1
-lr: 0.001
 profiler: null
 criterion:
   _target_: torch.nn.L1Loss
@@ -8,7 +6,8 @@ accumulate_grad_batches: 1
 
 fast_dev_run: true
 
-trainer_logger: null
+trainer_logger:
+  null
   # _target_: lightning.pytorch.loggers.NeptuneLogger
   # project: aaa/bbb
   # api_key: xxx
