--- a/conf/data/fma_small.yaml
+++ b/conf/data/fma_small.yaml
@@ -1,16 +1,10 @@
+defaults:
+  - transform: mel
+  - _self_
+
 _target_: fma.datamodule.FMADataModule
 metadata_dir: ./data/FMA/fma_metadata
 audio_dir: ./data/FMA/fma_small
 sample_rate: 22050
 n_segments: 3
-transform:
-  _target_: tool.pipeline.MelTransform
-  audio_duration: 30
-  n_segments: 3
-  sample_rate: 22050
-  n_fft: 1024
-  win_length: 1024
-  hop_length: 256
-  n_mels: 128
-  top_db: 80
 batch_size: 4
