--- a/conf/data/transform/mel_waveform.yaml
+++ b/conf/data/transform/mel_waveform.yaml
@@ -1,4 +1,4 @@
-_target_: tool.transforms.MelWaveformTransform
+_target_: transforms.dict.MelWaveformTransform
 audio_duration: 30
 n_segments: 3
 sample_rate: 22050
