Add: .envファイルを追加し、PYTHONPATHにsrc/BigVGANを設定。pyproject.tomlのパッケージ検索パスを更新。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@ url = "https://download.pytorch.org/whl/cu124"
 explicit = true
 
 [tool.setuptools.packages.find]
-where = ["src", "src/BigVGAN"]
+where = ["src"]
 
 [build-system]
 requires = ["setuptools", "wheel"]
