Change: BigVGANVocoderクラスを追加。default.yamlを削除し、unet_diffwave.yamlとunet_bigvgan.yamlを追加

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,7 +1,7 @@
 defaults:
   - data: fma_small
   - train: default
-  - infer: default
+  - infer: unet_bigvgan
   - model: unet
   - preprocess: guitar_set
   - _self_
